--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -119,12 +119,19 @@ File owner
 Full file type (file, dir, fifo, ...)
 .IP %y
 File type as one letter (f, d, p, ...)
-.IP %RA
+.IP %RR
 .IP %RC
 .IP %RM
-Print Robinhood's "last access time", "creation time" and
-"modification time". These are not always the same as the file's
-atime/ctime/mtime attributes. An \fBstrftime\fP(1) directive must be
+Respectively print Robinhood’s "creation time" (\fB%RR\fP), "last
+access time" (\fB%RA\fP) and "modification time" (\fB%RM\fP). "creation time"
+(\fB%RR\fP) is the oldest creation time seen for that file. It is
+always lesser or equal to the ctime of the file. "last access time"
+(\fB%RA\fP) is a compound of the file's atime and mtime, unless the
+configuration \fBlast_access_only_atime\fP is set, in which case it is
+exactly the atime of the file. "modification time" (\fB%RM\fP) is the
+file's mtime.
+
+An \fBstrftime\fP(1) directive must be
 added. For example: \fB%RCc %RMA %RAp %RAT\fP.
 This option can also take an strftime format option between
 brackets. For instance: \fB%RC{%A, %B %dth, %Y %F}\fP.
