Store ctime in the database
The file's change time (a.k.a. ctime) is now stored in the database,
in the last_mdchange column.

rbh-find and rbh-report have been updated to support searching for it
and display it.

Added test 120 to check that the correct times end in the database.

Change-Id: Iee8e608a7a4aeec8fcab8781e9d382813b471467

--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -36,6 +36,10 @@
 [-|+]<val>[s|m|h|d|y] (s: sec, m: min, h: hour, d:day, y:year. default unit is days)
 .TP
 .B
+\fB-ctime\fP \fItime_crit\fP
+[-|+]<val>[s|m|h|d|y] (s: sec, m: min, h: hour, d:day, y:year. default unit is days)
+.TP
+.B
 \fB-mtime\fP \fItime_crit\fP
 [-|+]<val>[s|m|h|d|y] (s: sec, m: min, h: hour, d:day, y:year. default unit is days)
 .TP
@@ -105,6 +109,10 @@ Robinhood’s "last access time", which is a compound of the file's atime and mt
 .B
 %b
 Number of blocks
+.TP
+.B
+%C
+Robinhood’s "last MD change" which is the ctime of the file.
 .TP
 .B
 %d
