Store ctime in the database
The file's change time (a.k.a. ctime) is now stored in the database,
in the last_mdchange column.

rbh-find and rbh-report have been updated to support searching for it
and display it.

Added test 120 to check that the correct times end in the database.

Change-Id: Iee8e608a7a4aeec8fcab8781e9d382813b471467

--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -106,6 +106,8 @@ An \fBstrftime\fP(1) directive must be added. For example: \fB%Ap
 brackets. For instance: \fB%A{%A, %B %dth, %Y %F}\fP.
 .IP %b
 Number of blocks
+.IP %C
+Robinhood’s "last MD change" which is the ctime of the file.
 .IP %d
 Depth
 .IP %f
